# nmma

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  Cluster_Resources.html  Dockerfile  GW-EM-resampling.html  LICENSE.md  MANIFEST.in  README.md  README.rst  _tasks.txt  build-deploy-container_nmma.yml  changelog.html  cmd.txt  combined_analysis.html  contributing.html  data_inj_obs.html  doc_requirements.txt  docker-compose.yml  fitting.html  genindex.html  grb_requirements.txt  gw_inference.html  gwemopt_light_curves_detection.html  index.html  injection.json  installation.html  instructions.md  joint_inference.html  lfi_analysis.html  memscript  ml_requirements.txt  models.html  nmma.def  objects.inv  observing-scenarios-light-curves.html  production_requirements.txt  (+18 more)
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-deploy-container.yml  continous_integration.yml  continous_integration_macos.yml  delete-branch-cache.yml  dependency-installation.yml  deploy-github-pages.yml  publish-to-anaconda.yml  publish-to-pypi.yml  python-package.yml  rst-linter.yml
_private/: _tasks.txt  toy.py
_sources/: Cluster_Resources.md  fitting.md  fitting.md.txt  gwemopt_light_curves_detection.md  index.rst  index.rst.txt  installation.md.txt  lfi_analysis.md  models.md.txt  observing-scenarios-light-curves.md  quick-start-guide.rst  training.md
_sources/api/: nmma.core.base.rst  nmma.core.constants.rst  nmma.core.conversion.rst  nmma.core.gitlab.rst  nmma.core.mpi_setup.rst  nmma.core.parsing.rst  nmma.core.plotting_utils.rst  nmma.core.rst  nmma.core.utils.rst  nmma.em.analysis.rst  nmma.em.analysis_condor.rst  nmma.em.analysis_lbol.rst  nmma.em.cluster_handling.rst  nmma.em.combine_EOS.rst  nmma.em.create_injection_condor.rst  nmma.em.create_injection_slurm.rst  nmma.em.create_lightcurves.rst  nmma.em.create_lightcurves_condor.rst  nmma.em.create_lightcurves_slurm.rst  nmma.em.create_svdmodel.rst  nmma.em.data.rst  nmma.em.detect_lightcurves.rst  nmma.em.em_likelihood.rst  nmma.em.em_parsing.rst  nmma.em.gwem_Hubble_estimate.rst  nmma.em.gwem_resampling.rst  nmma.em.gwem_resampling_condor.rst  nmma.em.gwem_resampling_utils.rst  nmma.em.gwsamples_creation.rst  nmma.em.injection.rst  nmma.em.injection_summary.rst  nmma.em.io.rst  nmma.em.lightcurve_generation.rst  nmma.em.lightcurve_handling.rst  nmma.em.lightcurve_marginalization.rst  nmma.em.likelihood.rst  nmma.em.manual.rst  nmma.em.model.rst  nmma.em.model_lbol.rst  nmma.em.model_parameters.rst  (+73 more)
_static/: documentation_options.js
api/: Dockerfile  app.py  environment.yml  log.py  nmma.core.base.html  nmma.core.constants.html  nmma.core.conversion.html  nmma.core.gitlab.html  nmma.core.html  nmma.core.mpi_setup.html  nmma.core.parsing.html  nmma.core.plotting_utils.html  nmma.core.utils.html  nmma.em.analysis.html  nmma.em.analysis_condor.html  nmma.em.analysis_lbol.html  nmma.em.cluster_handling.html  nmma.em.combine_EOS.html  nmma.em.create_injection_condor.html  nmma.em.create_injection_slurm.html  nmma.em.create_lightcurves.html  nmma.em.create_lightcurves_condor.html  nmma.em.create_lightcurves_slurm.html  nmma.em.create_svdmodel.html  nmma.em.data.html  nmma.em.detect_lightcurves.html  nmma.em.em_likelihood.html  nmma.em.em_parsing.html  nmma.em.gwem_Hubble_estimate.html  nmma.em.gwem_resampling.html  nmma.em.gwem_resampling_condor.html  nmma.em.gwem_resampling_utils.html  nmma.em.gwsamples_creation.html  nmma.em.html  nmma.em.injection.html  nmma.em.injection_summary.html  nmma.em.io.html  nmma.em.lightcurve_generation.html  nmma.em.lightcurve_handling.html  nmma.em.lightcurve_marginalization.html  (+72 more)
doc/: .doctor-rst.yaml  Cluster Resources.md  Cluster_Resources.md  GW-EM-resampling.md  Makefile  changelog.rst  combined_analysis.md  conf.py  constrain_R14_trend.md  contributing.md  data_inj_obs.md  fitting.md  gw_inference.md  gwemopt_light_curves_detection.md  gwsamples_generation.py  index.rst  installation.md  installation.rst  joint_inference.md  lfi_analysis.md  models.md  observing-scenarios-light-curves.md  quick-start-guide.rst  systematics.md  systematics.rst  training.md
doc/_static/: .nmma-docs.css.un~
example_files/: R14_trend_generate.py  R14_trend_plot.py  url_to_upload_gw_posteriors.txt
example_files/NICER/: J0030_3spot_RM.txt.REMOVED.git-id  NICER+XMM_J0740_RM.txt.REMOVED.git-id
example_files/lightcurves/: GRB211211A.txt
example_files/multi_config_analysis/: config.yaml  (+1 more)
mlmodel/: dataprocessing.py  embedding.py  normalizingflows.py
nmma/: .version  __init__.py  main.ipynb  skyportal_osg.py
nmma.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
patches/: readme.txt
priors/: AT2017gfo.prior  AnBa2022.prior  AnBa2022_sparse.prior  Bu2019lm.prior  Bu2019lmGau.prior  Bu2019lmNoROQ.prior  Bu2019lm_Hubble.prior  Bu2019lm_TrPi2018GRB211211A.prior  Bu2019nsbh.prior  Bu2019nsbh_TrPi2018_GRB211211A.prior  Bu2021fd.prior  Bu2022Ye.prior  Bu2022mv.prior  Bu2023Ye.prior  GWBNS.prior  GWNSBH.prior  HoNa2020.prior  Ka2017.prior  LANL1D.prior  LANL2022.prior  Me2017.prior  Me2017_Hubble.prior  Piro2021.prior  Sr2023.prior  TrPi2018.prior  TrPi2018_onaxis.prior  ZTF_lgrb.prior  ZTF_sgrb.prior  injec_alspin.prior  maximum_mass_resampling.prior  ninaprio.prior  nugent-hyper.prior  nugent-hyper_TrPi2018.prior  salt2.prior  sncosmo-generic.prior  sncosmo-generic_TrPi2018.prior  systematic.yaml  systematics.yaml
svdmodels/: Bu2019lm.pkl  Bu2019lm_lbol_tf.pkl  Bu2019lm_tf.pkl.REMOVED.git-id  Bu2021ka_lbol_tf_sin2.pkl  Bu2021ka_mag_tf_sin2.pkl.REMOVED.git-id  Bu2022Ye_tf.pkl.REMOVED.git-id  Bu2022mv_tf.pkl.REMOVED.git-id
tools/: analysis_slurm.py  convert_skyportal_lcs.py  corner_plot.py  make_lcs.py  make_lcs_LANL.py  make_lcs_hdf5.py  make_lcs_kasen.py  plot_svdmodel_benchmarks.py  resample_grid.py  tf_training_calls.sh
tutorial/: LC-simulatori.ipynb
tutorials/: Tutorial_nmmalcsimulator.ipynb  tutorial-KN-models-training.ipynb  tutorial-lightcurve_simulation.ipynb
(+464 files in other folders)
