[build-system]
requires = ["setuptools>=45", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nmma"
authors = [
    {name = "Peter Tsun Ho Pang, Michael Coughlin, Tim Dietrich, Ingo Tews", email = "nuclear_multimessenger_astronomy@googlegroups.com"}
]
description = "A nuclear physics multi-messenger Bayesian inference library"
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = {text = "GPLv3"}
classifiers = [
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Intended Audience :: Science/Research',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Astronomy',
    'Topic :: Scientific/Engineering :: Physics',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
]
dynamic = ["dependencies", "optional-dependencies", "version"]


[tool.setuptools.dynamic]
version = {attr = "nmma.__version__"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies.doc = { file = ["doc_requirements.txt"] }
optional-dependencies.grb = { file = ["grb_requirements.txt"] }
optional-dependencies.production = { file = ["production_requirements.txt"] }
optional-dependencies.neuralnet = { file = ["ml_requirements.txt"] }
optional-dependencies.sklearn = { file = ["sklearn_requirements.txt"] }
optional-dependencies.tf = { file = ["tf_requirements.txt"] }
optional-dependencies.sampler = { file = ["sampler_requirements.txt"] }

[project.scripts]
nmma-generation = "nmma.pbilby.generation:main_nmma"
nmma-gw-generation = "nmma.pbilby.generation:main_nmma_gw"
nmma-analysis = "nmma.pbilby.analysis:main_nmma"
nmma-gw-analysis = "nmma.pbilby.analysis:main_nmma_gw"
lightcurve-analysis = "nmma.em.analysis:main"
lightcurve-analysis-lbol = "nmma.em.analysis_lbol:main"
lightcurve-analysis-condor = "nmma.em.analysis_condor:main"
lightcurve-injection-summary = "nmma.em.injection_summary:main"
lightcurve-injection-slurm-setup = "nmma.em.create_injection_slurm:main"
lightcurve-injection-condor-setup = "nmma.em.create_injection_condor:main"
lightcurve-manual = "nmma.em.manual:main"
lightcurve-marginalization = "nmma.em.lightcurve_marginalization:main"
combine-EOS = "nmma.em.combine_EOS:main"
create-lightcurve-slurm = "nmma.em.create_lightcurves_slurm:main"
create-lightcurve-condor = "nmma.em.create_lightcurves_condor:main"
create-svdmodel = "nmma.em.create_svdmodel:main"
svdmodel-benchmark = "nmma.em.svdmodel_benchmark:main"
plot-svdmodel-benchmarks = "tools.plot_svdmodel_benchmarks:main"
svdmodel-download = "nmma.utils.models:main"
lightcurve-generation = "nmma.em.create_lightcurves:main"
lightcurve-detection = "nmma.em.detect_lightcurves:main"
lightcurve-validation = "nmma.em.validate_lightcurve:main"
nmma-create-injection = "nmma.eos.create_injection:main"
gwem-resampling = "nmma.em.gwem_resampling:main"
gwem-resampling-condor = "nmma.em.gwem_resampling_condor:main"
gwem-Hubble-estimate = "nmma.em.gwem_Hubble_estimate:main"
maximum-mass-constraint = "nmma.joint.maximum_mass_constraint:main"
convert-skyportal-lcs = "tools.convert_skyportal_lcs:main"
resample-grid = "tools.resample_grid:main"
multi-config-analysis = "nmma.em.multi_config_analysis:main"

[project.urls]
Homepage = "https://github.com/nuclear-multimessenger-astronomy/nmma"
Documentation = "https://nuclear-multimessenger-astronomy.github.io/nmma/"
Download = "https://pypi.org/project/nmma/#files"
Tracker = "https://github.com/nuclear-multimessenger-astronomy/nmma/issues"

[tool.setuptools.packages.find]
include = ["nmma*", "tools*"]

[tool.setuptools.package-data]
gwemopt = ['data/*/*']

[tool.coverage.run]
source = ["nmma"]
omit = [
    "nmma/tests/*",
    "nmma/__main__.py",
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __repr__",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    "raise KeyError",
    "except KeyError",
    "raise ValueError",
    "except JSONDecodeError:",
    "raise requests.exceptions.RequestException",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if False:",
    'if __name__ == "__main__":',
    "err =",
    "logger.error",
    "raise"
    ]
ignore_errors = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--verbose -r s"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"

[tool.bumpver]
current_version = "0.2.3"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"']
"nmma/__init__.py" = ['__version__ = "{version}"']
